                           Add X-Loop header on mailbox forwarded messages.
                           Several small fixes by Sami Farin et al.
                           Detach correctly in daemon mode.
                           Minor Install script fixes.

2002-08-20	2.9b37     OpenPGP enhancement release (fixes by Disastry).
                           Fix a small bug in pgpdata.c that stopped Mixmaster
                             from reading cipher preferences.
                           Fixed Passphrase reading in mpgp (the test program)
                             on Windows platform.
                           Add Hash: header when clearsigning.
                           Properly handle RSA keys whose key size is not a 
                             multiple of 64.
                           Remove leading zeros from MPI.
                           Use MDC packets whenever possible.
                           List CAST5 and AES128 in cipher preferences.
                           Now displays Mixmaster version in the PGP version
                             header for non remailer/nym messages.

2002-??-??	2.9b38     Applied Maildir feature patch by drt@un.bewaff.net,
                             with some changes by PP:
                             MAILBOX can now be a Maildir (closes: #586223).
                           Install script deals with lack of patented IDEA
                             algorithm in a sane way (closes: #479020).
                           New option MAILIN that can be set to either a mbox
                             or Maildir folder. New mail will be read from it
                             and the folder cleared every time Mixmaster
                             processes its pool (closes: #597043).
                           When sending type II messages interactivly you may
                             now choose a middleman remailer as the last hop
                             in your chain (closes: #481244).